infrastructure/CD/kubernetes/backend_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: backend
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - image: docker.io/zeeward41/test:backend_v1
        name: backend
        ports:
        - containerPort: 5000
      imagePullSecrets:
      - name: dockerhub-secret
