infrastructure/CD/kubernetes/frontend_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: frontend
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: docker.io/zeeward41/test:frontend_v1
        name: frontend
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: dockerhub-secret
