infrastructure/CD/kubernetes/range_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: range-service
spec:
  type: ClusterIP
  selector:
    app: range
  ports:
    - port: 8000
      protocol: TCP
      targetPort: 8000
